--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,136 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width"/>
+<title>Westgate Veterinary Hospital</title>
+<meta name="description" content="Westgate Veterinary Hospital and Laytown Veterinary Clinic provide a complete vet service 24/7, including an animal health shop, pet grooming service &amp; boarding kennels">
+<link rel="icon" href="images/wv_icon_32.png" sizes="32x32"/>
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700|PT+Sans+Narrow:400,700|Wendy+One" rel="stylesheet">
+<link href="css/main.css" rel="stylesheet" type="text/css"/>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages!!!!!!</p>
+
+
+<div id="pageContainer">
+
+	<!-- header -->
+	<header id="pageHeader">
+		<hgroup id="businessName">
+			<h1>Westgate</h1>
+			<h2>Veterinary Hospital</h2>
+		</hgroup>
+		
+		<div id="bannerLogo"><img src="images/wv_logo_sm_white.png" width="91" height="57" alt="Westgate Veterinary Hospital Logo"/></div>
+		
+		<!-- navigation -->
+		<nav id="bannerNav">
+			<ul>
+				<li><a href="/index.htm" class="navLink, selected">Welcome</a><span class="linkSeparator">/</span></li>
+				<li><a href="/html/clinics.htm" class="navLink">Clinics</a><span class="linkSeparator">/</span></li>
+				<li><a href="/html/services.htm" class="navLink">Services</a><span class="linkSeparator">/</span></li>
+				<li><a href="/html/staff.htm" class="navLink">Staff</a><span class="linkSeparator">/</span></li>
+				<li><a href="/html/shop.htm" class="navLink">Shop</a><span class="linkSeparator">/</span></li>
+				<li><a href="/html/petinfo.htm" class="navLink">Pet Info</a><span class="linkSeparator">/</span></li>
+				<li><a href="/html/contact.htm" class="navLink">Contact</a></li>
+			</ul>
+		</nav>
+		<!-- /navigation -->
+		
+	</header>
+	<!-- /header -->
+
+	<!-- content -->
+	<div class="contentContainer">
+		<div class="content">
+			<div class="contentLeftCol contentColLarge">
+				<!-- welcome text -->
+				<section class="contentAreaBlue">
+					<div id="welcomeHeader">
+						<h1>Welcome</h1>
+						<div id="bookAppointment">Book an appointment on 041-9837658 or 041-9838718</div>
+					</div>
+					<p>
+					Westgate Veterinary Hospital is a Veterinary Council accredited practice situated in Scarlet Street, Drogheda. We have 6 Veterinary Surgeons, 7 Veterinary Nurses and multiple admin staff, and have been providing veterinary services throughout the Louth and Meath area since 1986
+					</p>
+					<p>
+					With constantly advancing diagnostics, medicines and an extensive fully qualified veterinary staff we aim to provide your pets with the highest standard of veterinary care within a warm and welcoming environment. 
+					</p>
+					<p>
+					We run daily clinics. Appointments are available and recommended to minimise waiting times for our clients.
+					</p>
+				</section>
+				<!-- opening hours --->
+				<div class="contentLeftCol" id="openingHours">
+					<section id="weekdayHours" class="highlightArea">
+						<h1>Mon - Fri:</h1>
+						<ul>
+							<li>9.00am – 10.30am</li> 
+							<li>2.00pm – 3.30pm</li>
+							<li>5.00pm – 6.30pm</li>
+						</ul>
+					</section>
+					<section id="weekendHours" class="highlightArea">
+						<h1>Saturday:</h1>
+						<ul>
+							<li>9.00am – 11.00am</li> 
+							<li>2.00pm – 3.30pm</li>
+						</ul>
+					</section>							
+				</div>
+				<!-- map -->
+				<div class="contentRightCol" id="map">		
+					<div class="whiteFrame">				
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2360.9656289798995!2d-6.3485496480940204!3d53.71887467996088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48673a22510ea80d%3A0xb6e19f30db8ba86c!2sWestgate+Veterinary+Clinic!5e0!3m2!1sen!2sie!4v1484648529541" width="340" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+			<div class="contentRightCol contentColSmall">
+			<!-- welcome image -->
+				<section>
+					<div class="whiteFrame" id="dogcatFrame">
+						<img src="images/wv_dogcat.jpg" width="415" height="401" alt="Dog and cat friends"/>
+					</div>
+				</section>
+				<!-- secondary text -->
+
+					<section class="contentAreaWhite">
+						<p>
+						We have ample free off road parking and a large range of up to date in house diagnostics to ensure the most convenient visit for you and your pet.
+						</p>
+						<p> 
+						We also provide our own 24 hour out of hours emergency service, ensuring it is one of our Vets that answer your call.
+						</p>
+						<p>Find us on <a href="https://www.facebook.com/WestgateVeterinaryHospital" target="_blank">Facebook</a>, and check out our page for special offers, lost and found pets, and lots more ...
+						</p>
+					</section>
+
+
+			</div>
+		</div>
+		
+			<!-- footer -->
+	<footer>
+		<!-- navigation -->
+		<nav id="footerNav">
+        <ul>
+			<li><a href="/index.htm" class="navLink, selected">Welcome</a><span class="linkSeparator">/</span></li>
+			<li><a href="/html/clinics.htm" class="navLink">Clinics</a><span class="linkSeparator">/</span></li>
+			<li><a href="/html/services.htm" class="navLink">Services</a><span class="linkSeparator">/</span></li>
+			<li><a href="/html/staff.htm" class="navLink">Staff</a><span class="linkSeparator">/</span></li>
+			<li><a href="/html/shop.htm" class="navLink">Shop</a><span class="linkSeparator">/</span></li>
+			<li><a href="/html/petinfo.htm" class="navLink">Pet Info</a><span class="linkSeparator">/</span></li>
+			<li><a href="/html/contact.htm" class="navLink">Contact</a></li>
+        </ul>
+      </nav>
+      <!-- /navigation -->
+	<p><span class="footerText" >Westgate Veterinary Hospital, Scarlet Street, Drogheda, Co. Louth. Phone: 041-9838718 / 041-9837658.</span></p>		
+  </footer>
+  <!-- /footer -->
+	</div>
+	<!-- /content -->
+
+
+</div>
 </body>
 </html>
